# swagger.yaml
@@ -46,6 +46,18 @@ paths:
           description: Successfully generated new numbers
         500:
           $ref: '#/components/errors/internalServerError'
+
+  /phonenumbers/save:
+    post:
+      summary: Save the generated numbers in  an external file storage
+      description: For numbers to be saved they first need to be generated by a user
+      tags:
+        - Phone Numbers
+      responses:
+        201:
+          description: successfully saved phone numbers to file storage
+        500:
+          $ref: '#/components/errors/internalServerError'
         
 
   /phonenumbers:
